# Proyecto-2-PacMan

PuckMan/: CMakeLists.txt  ConvertSketch.cpp  ConvertSketch.hpp  Dificil.cpp  Dificil.h  DrawMap.cpp  DrawMap.hpp  DrawText.cpp  DrawText.hpp  Experto.cpp  Experto.h  Facil.cpp  Facil.h  Ghost.cpp  Ghost.hpp  GhostManager.cpp  GhostManager.hpp  Global.hpp  Main.cpp  MapCollision.cpp  MapCollision.hpp  Medio.cpp  Medio.h  Menu.cpp  Menu.h  Pacman.cpp  Pacman.hpp  contrAndroid.cpp  contrAndroid.h  main.cpp
